<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/drawer_speakers"
            android:icon="@drawable/ic_speakers"
            android:title="@string/speakers"/>

        <item
            android:id="@+id/drawer_agenda"
            android:checked="true"
            android:icon="@drawable/ic_agenda"
            android:title="@string/agenda" />

        <item
            android:id="@+id/drawer_favourites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favourites" />

        <item
            android:id="@+id/drawer_map_and_info"
            android:icon="@drawable/ic_map"
            android:title="@string/map_and_info" />

        <item
            android:id="@+id/drawer_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />

        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

    </group>

</menu>